syntax = "proto3";

package payments_v1;

option go_package = "github.com/lee-aaron/stripe-go/grpc";

message CreatePortalRequest {
  string customer_id = 1;
  string return_url = 2;
  string stripe_account = 3;
}

message CreatePortalReply {
  string portal_url = 1;
}

message CreateLoginLinkRequest {
  string stripe_account = 1;
}

message CreateLoginLinkReply {
  string login_link_url = 1;
}

service PortalHandler {
  rpc CreatePortal(CreatePortalRequest) returns (CreatePortalReply);
  rpc CreateLoginLink(CreateLoginLinkRequest) returns (CreateLoginLinkReply);
}